# rasterizer

./: CMakeLists.txt  README.md  main.cpp
examples/: ex1_draw_lines.cpp  ex2_draw_triangles.cpp  ex3_rasterizer.cpp  ex4_shader.cpp
include/: camera.h  line.h  normal_rasterizer.h  obj_reader.h  rasterizer.h  shader.h  tgaimage.h  transform.h  triangle.h  triangle_shader.h
include/examples/: ex1_draw_lines.h  ex2_draw_triangles.h  ex3_rasterizer.h  ex4_shader.h
output/: ex1_draw_lines.tga  ex2_draw_triangles.tga  ex2_draw_triangles_intensity_orthographic.tga  ex2_draw_triangles_intensity_orthographic_aa.tga  ex2_draw_triangles_intensity_perspective.tga  ex2_draw_triangles_intensity_perspective_aa.tga  ex2_draw_triangles_normal_orthographic.tga  ex2_draw_triangles_normal_orthographic_aa.tga  ex2_draw_triangles_normal_perspective.tga  ex2_draw_triangles_normal_perspective_aa.tga  ex2_draw_triangles_w_zbuffer.tga  rasterizer.tga  shader.tga
output/rasterizer/: 0.tga  10.tga  100.tga  110.tga  120.tga  130.tga  140.tga  150.tga  160.tga  170.tga  180.tga  190.tga  20.tga  200.tga  210.tga  220.tga  230.tga  240.tga  250.tga  260.tga  270.tga  280.tga  290.tga  30.tga  300.tga  310.tga  320.tga  330.tga  340.tga  350.tga  40.tga  50.tga  60.tga  70.tga  80.tga  90.tga
output/rasterizer_white/: 0.tga  10.tga  100.tga  110.tga  120.tga  130.tga  140.tga  150.tga  160.tga  170.tga  180.tga  190.tga  20.tga  200.tga  (+57 more)
src/: camera.cpp  line.cpp  normal_rasterizer.cpp  obj_reader.cpp  rasterizer.cpp  shader.cpp  tgaimage.cpp  transform.cpp  triangle.cpp  triangle_shader.cpp
